--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,8 @@ features = ["serde"]
 [dependencies.rocket]
 version = "0.5.0-rc.1"
 features = ["json", "msgpack"]
+
+[dependencies.reqwest]
+version = "0.11.6"
+default-features = false
+features = ["json", "gzip", "rustls-tls"]
